Fix pullquote alignment

--- a/web/app/themes/wp-gds-theme/resources/styles/blocks/core-pullquote.scss
+++ b/web/app/themes/wp-gds-theme/resources/styles/blocks/core-pullquote.scss
@@ -1,3 +1,4 @@
 .wp-block-pullquote {
-  //
+  margin-left: auto;
+  margin-right: auto;
 }
